fixed navbar and footer, all content in containers

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,14 +2,18 @@ body {
     background-image: url("../images/dot-grid.png");
 }
 
+
+
 .name {
     font-family: 'Georgia', Times, 'Times New Roman', serif;
     color: white;
     padding: 10px;
     text-align: center;
     background-color: #4aaaa5;
-    float: left;
+    
 }
+
+
 
 .main-content {
     background-color: #ffffff;
@@ -19,44 +23,54 @@ body {
     margin-left: auto;
     margin-right: auto;
     line-height: 1.6;
+    margin-top: 10px;
+}
+
+h2 {
+    font-family: 'Georgia', Times, 'Times New Roman', serif; 
+    padding: 10px;
+    color: #4aaaa5;
+    font-weight: bold;
 }
 
 img {
     float: left;
-    margin: 10px;
+    /* margin: 10px; */
 }
 
 .footer {
     position: fixed;
     bottom: 0;
+    left: 0;
     width: 100%;
-    /* Set the fixed height of the footer here */
     height: 60px;
-    line-height: 60px; /* Vertically center the text there */
-    background-color: #f5f5f5;
-}
+    line-height: 60px;
+    text-align: center;
+    background-color: #f5f5f5; 
+} 
   
   
+
+
 .portfolio-content {
     background-color: #ffffff;
     border: 3px solid #dddddd;
     border-radius: 25px;
     padding: 10px;
     margin-top: 10px;
-    width: 960px;
     margin-left: auto;
     margin-right: auto;
-    height: 540px;
+    /* would like this to get taller on small screens */
+    /* height: 520px; */
     line-height: 1.6;
-
+}
 
 
 .portfolio-container {
     position: relative;
     width: 200px;
     height: 200px;
-    float: left;
-    margin: 17px 17px 17px 17px;
+    /* margin: 17px 17px 17px 17px; */
 }
 
 
@@ -66,7 +80,7 @@ img {
     color: #ffffff;
     text-align: center;
     padding: 10px;
-    bottom: 1px;
+    bottom: 3px;
     margin: 0px 10px 0px 10px;
     width: 180px; 
 }
